Update deploy in prod

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -160,11 +160,11 @@ stages:
             package: '$(System.DefaultWorkingDirectory)/'
             deploymentMethod: 'auto'
 
-#        - task: AzureAppServiceManage@0
-#          inputs:
-#            azureSubscription: 'Versione di valutazione gratuita(909e9301-d388-4277-947c-277b65681859)'
-#            WebAppName: <name of the Function app>
-#            ResourceGroupName: 'myResourceGroup'
-#            SourceSlot: staging
-#            SwapWithProduction: true          
+        - task: AzureAppServiceManage@0
+          inputs:
+            azureSubscription: '$(AZURE_SUBSCRIPTION)'
+            WebAppName: '$(APP_NAME)'
+            ResourceGroupName: '$(RESOURCE_GROUP_NAME)'
+            SourceSlot: staging
+            SwapWithProduction: true
 
