Update add PROD deploy

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,4 @@
-# Azure DevOps pipeline to build, check source codes, run tests, and more.
+# Azure DevOps pipeline to build, check source codes, run tests, and deploy.
 #
 # This pipeline has been implemented to be run on hosted agent pools based both
 # on 'windows' and 'ubuntu' virtual machine images and using the scripts defined
@@ -22,7 +22,7 @@ variables:
   YARN_CACHE_FOLDER: $(Pipeline.Workspace)/.yarn
 
 # This pipeline is triggered to run whenever a push is made to 
-# any branch or the 'latest' tag is pushed
+# any branch (not only 'master') or the 'latest' tag is pushed
 trigger:
   branches:
     include:
@@ -191,7 +191,7 @@ stages:
             SwapWithProduction: true
 
 
-  # D) Deploy to STAGING only if there is a push on 'master' branch
+  # D1) Deploy to STAGING only if there is a push on 'master' branch
   - stage: Deploy_staging
     dependsOn: []
     condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
@@ -224,5 +224,48 @@ stages:
               appType: 'functionApp'
               appName: '$(APP_NAME)'
               resourceGroupName: '$(RESOURCE_GROUP_NAME)'
+              package: '$(System.DefaultWorkingDirectory)/'
+              deploymentMethod: 'auto'
+
+  # D2) Deploy to PRODUCTION only if the 'latest' tag is pushed
+  - stage: Deploy_prod
+    dependsOn: []
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/tags/latest'))
+    jobs:
+      - job: prepare_deploy
+        steps:
+        - bash: |            
+            if [[ -z "${PRODUCTION_RESOURCE_GROUP_NAME}" ]]
+            then
+              echo 'Set up environment variables first if you want to start a new deploy'
+              exit 1
+            fi
+          displayName: 'Check variables'
+        - task: Cache@2
+          inputs:
+            key: 'yarn | "$(Agent.OS)" | yarn.lock'
+            restoreKeys: |
+              yarn | "$(Agent.OS)"
+              yarn
+            path: $(YARN_CACHE_FOLDER)
+          displayName: Cache Yarn packages
+
+        - script: |
+            yarn install --frozen-lockfile --no-progress --non-interactive --network-concurrency 1
+          displayName: 'Install node modules'
+
+        - bash: |
+            yarn build
+          displayName: 'Build'
+
+      - job: deploy
+        dependsOn: [prepare_deploy]
+        steps:
+          - task: AzureFunctionApp@1
+            inputs:
+              azureSubscription: '$(AZURE_SUBSCRIPTION)'
+              appType: 'functionApp'
+              appName: '$(APP_NAME)'
+              resourceGroupName: '$(PRODUCTION_RESOURCE_GROUP_NAME)'
               package: '$(System.DefaultWorkingDirectory)/'
               deploymentMethod: 'auto'
