--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,6 +66,8 @@ stages:
             yarn build
           displayName: 'Build'
 
+      - job: lint
+        steps:
         - script: |
             yarn lint
           displayName: 'Lint'
