--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -100,7 +100,7 @@ stages:
 
       # A4) Check source code with danger (only when there is a PR)
       - job: danger 
-        condition: and(variables['DANGER_GITHUB_API_TOKEN'], neq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        condition: and(variables['DANGER_GITHUB_API_TOKEN'], nq(variables['Build.SourceBranch'], 'refs/heads/master'))
         steps:
         - task: Cache@2
           inputs:
