--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,40 +5,35 @@
 # in the package.json file. Since we are deploying on Azure functions on Windows
 # runtime, the pipeline is currently configured to use a Windows hosted image.
 #
-# The following variables needs to be defined before running the pipeline:
+# The following variables needs to be defined before running the deployment jobs 
+# defined in this pipeline:
 # - STAGING_AZURE_SUBSCRIPTION
 # - STAGING_RESOURCE_GROUP_NAME
 # - STAGING_FUNCTION_APP_NAME
-#
 # - PRODUCTION_AZURE_SUBSCRIPTION
 # - PRODUCTION_RESOURCE_GROUP_NAME
 # - PRODUCTION_FUNCTION_APP_NAME
-
-# - AZURE_SP_TENANT="<tenantid>" 
-# - AZURE_SP="<service principal id>"
-# - AZURE_SP_PASSWORD="<service principal password>"
-# - AZURE_SUBSCRIPTION_ID="<subscription id>"
-# - PRODUCTION_RESOURCE_GROUP_NAME="<production resource group>"
-# - STAGING_RESOURCE_GROUP_NAME="<staging resource group>"
-# - FUNCTION_APP_NAME="<function app name>"
+#
+# To enable the deployment and choose the type of deployment you also need to 
+# configure these variables:
+# - DO_DEPLOY: if False or undefined all deployments are skipped
+# - DEPLOY_TO_SLOT: if True the deployment to slot is performed
 
 variables:
   YARN_CACHE_FOLDER: $(Pipeline.Workspace)/.yarn
-  #DO_DEPLOY: True
-  #DEPLOY_TO_SLOT: False
 
-# This pipeline is triggered to run whenever a push is made to 
-# any branch (not only 'master') or the 'latest' tag is pushed
+# This pipeline can be manually run or is automatically triggered whenever one 
+# of the following condition is true:
+# - a push is made to any branch in the repository (not only 'master')
+# - a pull request is created
+# - a tag named 'latest' is pushed
+# Note. In the last case, the tag can be (re-)created using the Git CLI, e.g.:
+#    git push -f origin <abfb967>:refs/tags/latest
 trigger:
   branches:
     include:
       - '*'
       - refs/tags/latest
-
-#pr:
-#  branches:
-#    include:
-#    - 'master1'
 
 pool:
   vmImage: 'windows-2019'
@@ -127,7 +122,7 @@ stages:
           displayName: 'Danger CI'
 
 
-  # B) Run unit tests
+  # B) Run unit tests if there is a push or pull request on any branch.
   - stage: Test
     dependsOn: []
     jobs:
@@ -158,8 +153,8 @@ stages:
   # C) Deploy to STAGING only if there is a push on 'master' branch.
   # Other conditions based on variables settings:
   # - if $DO_DEPLOY != True (or undefined) skip deployment, otherwise:
-  #   - c1) $DEPLOY_TO_SLOT != True (or undefined): deploy to TEST environment
-  #   - c2) $DEPLOY_TO_SLOT == True: deploy to staging slot in production environment
+  #   - c1) $DEPLOY_TO_SLOT != True (or undefined): deploy to STAGING environment
+  #   - c2) $DEPLOY_TO_SLOT == True: deploy to staging slot in PROD environment
   - stage: Deploy_staging
     condition: and(succeeded(),
         and(
@@ -190,7 +185,7 @@ stages:
             yarn build
           displayName: 'Build'
 
-        # c1) First option: standard deployment in TEST env (without slots)
+        # c1) First option: standard deployment in STAGING env (without slots)
         - task: AzureFunctionApp@1
           condition: and(succeeded(), ne(variables['DEPLOY_TO_SLOT'], True))
           inputs:
@@ -200,9 +195,9 @@ stages:
             appName: '$(STAGING_FUNCTION_APP_NAME)'
             package: '$(System.DefaultWorkingDirectory)/'
             deploymentMethod: 'auto'
-          displayName: Deploy to test env
+          displayName: Deploy to staging env
 
-        # c2) Alternative option: deployment to 'staging' slot in production env.
+        # c2) Alternative option: deployment to 'staging' slot in PROD env.
         # Note. Deployment slots let you deploy different versions of your function
         # app to different URLs. You can test a certain version and then swap content
         # and configuration between slots.
@@ -270,7 +265,7 @@ stages:
 
         # d2) Alternative option: deployment in PROD using slots.
 
-        # d2-I) Deployment to 'staging' slot in production environment.
+        # d2-I) Deployment to 'staging' slot in PROD environment.
         # Note. The deployment to 'staging' slot is done to be sure that the code
         # tagged 'latest' is the ones that will be swapped to be deployed in Prod...
         - task: AzureFunctionApp@1
@@ -286,7 +281,7 @@ stages:
             slotName: 'staging'
           displayName: Deploy to staging slot
 
-        # d2-II) Swap 'staging' with 'production' slot.
+        # d2-II) Swap 'staging' with 'production' slot in PROD env.
         - task: AzureAppServiceManage@0
           condition: and(succeeded(), eq(variables['DEPLOY_TO_SLOT'], True))
           inputs:
