--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,11 +46,6 @@ stages:
       # A1) Checkout, install module and compile
       - job: compile
         steps:
-        - task: NodeTool@0
-          inputs:
-            versionSpec: '10.14.1'
-          displayName: 'Install node.js'
-
         - task: Cache@2
           inputs:
             key: 'yarn | "$(Agent.OS)" | yarn.lock'
@@ -136,6 +131,10 @@ stages:
               yarn
             path: $(YARN_CACHE_FOLDER)
           displayName: Cache yarn packages
+
+        - task: UseNode@1
+          inputs:
+            version: '10.14.1'
 
         - script: |
             node -v
