--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,5 @@
 # Azure DevOps pipeline to build, check source codes, run tests, and deploy.
 #
-# This pipeline has been implemented to be run on hosted agent pools based both
-# on 'windows' and 'ubuntu' virtual machine images and using the scripts defined
-# in the package.json file. Since we are deploying on Azure functions on Windows
-# runtime, the pipeline is currently configured to use a Windows hosted image.
-#
 # The following variables needs to be defined before running the deployment jobs 
 # defined in this pipeline:
 # - STAGING_AZURE_SUBSCRIPTION
@@ -20,6 +15,7 @@
 # - DEPLOY_TO_SLOT: if True the deployment to slot is performed
 
 variables:
+  NODE_VERSION: '10.14.1'
   YARN_CACHE_FOLDER: $(Pipeline.Workspace)/.yarn
 
 # This pipeline can be manually run or is automatically triggered whenever one 
@@ -35,6 +31,10 @@ trigger:
       - '*'
       - refs/tags/latest
 
+# This pipeline has been implemented to be run on hosted agent pools based both
+# on 'windows' and 'ubuntu' virtual machine images and using the scripts defined
+# in the package.json file. Since we are deploying on Azure functions on Windows
+# runtime, the pipeline is currently configured to use a Windows hosted image.
 pool:
   vmImage: 'windows-2019'
 
@@ -90,7 +90,7 @@ stages:
             npx oval validate -p openapi/index.yaml
           displayName: 'Validate openAPI'
 
-      # A4) Check source code with danger (only when there is a PR)
+      # A4) Check source code with danger (ignore when master)
       - job: danger
         condition: and(succeeded(),
             and(
@@ -123,6 +123,11 @@ stages:
     jobs:
       - job: unit_tests
         steps:
+        - task: UseNode@1
+          inputs:
+            version: $(NODE_VERSION)
+          displayName: 'Set up Node.js'
+
         - task: Cache@2
           inputs:
             key: 'yarn | "$(Agent.OS)" | yarn.lock'
@@ -131,14 +136,6 @@ stages:
               yarn
             path: $(YARN_CACHE_FOLDER)
           displayName: Cache yarn packages
-
-        - task: UseNode@1
-          inputs:
-            version: '10.14.1'
-
-        - script: |
-            node -v
-          displayName: 'Node version'
 
         - script: |
             yarn install --frozen-lockfile --no-progress --non-interactive --network-concurrency 1
