--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "prestart": "npm run build && func extensions install",
     "start:host": "func start",
     "start": "npm-run-all --parallel start:host watch",
-    "test": "jest",
-    "test:coverage": "jest --coverage",
+    "pretest": "yarn generate:definitions",
+    "test": "dotenv -e env.example -- jest",
+    "pretest:coverage": "yarn generate:definitions",
+    "test:coverage": "dotenv -e env.example -- jest --coverage",
     "lint": "tslint -p .",
     "deploy": "npm run build && func azure functionapp publish agid-functions-admin-test",
     "generate:definitions": "rimraf ./generated/definitions && shx mkdir -p ./generated/definitions && gen-api-models --api-spec ./openapi/index.yaml --out-dir ./generated/definitions",
+    "dist:modules": "modclean -r -n default:safe && npm prune --production",
     "dist:zip": "zip -r dist.zip . --exclude @.funcignore --exclude .funcignore",
-    "predeploy": "npm-run-all build:production dist:zip"
+    "predeploy": "npm-run-all build dist:*"
   },
   "description": "",
   "devDependencies": {
@@ -23,14 +26,18 @@
     "@types/documentdb": "^1.10.5",
     "@types/express": "^4.16.0",
     "@types/jest": "^24.0.15",
+    "@types/lolex": "^5.1.0",
     "azurite": "^3.1.2-preview",
     "danger": "^4.0.2",
     "danger-plugin-digitalcitizenship": "^0.3.1",
+    "dotenv-cli": "^3.1.0",
     "fast-check": "^1.16.0",
     "italia-tslint-rules": "^1.1.3",
     "italia-utils": "^4.1.0",
     "jest": "^24.8.0",
     "jest-mock-express": "^0.1.1",
+    "lolex": "^5.1.2",
+    "modclean": "^3.0.0-beta.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "shx": "^0.3.2",
@@ -39,15 +46,20 @@
     "typescript": "^3.6.2"
   },
   "dependencies": {
+    "@azure/arm-apimanagement": "^5.1.1",
+    "@azure/ms-rest-nodeauth": "^2.0.5",
     "azure-storage": "^2.10.3",
     "documentdb": "^1.12.2",
     "durable-functions": "^1.2.4",
     "express": "^4.15.3",
     "fp-ts": "1.12.0",
-    "io-functions-commons": "^1.3.0",
+    "io-functions-commons": "^1.9.0",
     "io-functions-express": "^0.1.0",
     "io-ts": "1.8.5",
     "italia-ts-commons": "^5.1.11",
     "winston": "^3.2.1"
+  },
+  "resolutions": {
+    "handlebars": "~4.5.3"
   }
 }
