--- a/openapi/index.yaml
+++ b/openapi/index.yaml
@@ -96,7 +96,50 @@ paths:
               service_id: 2b3e728c1a5d1efa035c
               service_name: service
               authorized_cidrs: []
+  "/services/{service_id}/logo":
+    parameters:
+      - name: service_id
+        in: path
+        type: string
+        required: true
+        description: The ID of a existing Service.
+      - name: body
+        in: body
+        required: true
+        schema:
+          $ref: "#/definitions/Logo"
+        description: The logo payload
+    put:
+      responses:
+        "201":
+          description: Logo uploaded.
+          headers:
+            Location:
+              description: Link to the uploaded logo
+              type: string
+        "400":
+          description: Invalid payload.
+          schema:
+            $ref: "#/definitions/ProblemJson"
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "404":
+          description: No service found for the provided ID.
+        "500":
+          description: Internal server error
+      summary: Upload service logo.
+      operationId: uploadServiceLogo
   "/services":
+    get:
+      responses:
+        "200":
+          description: The list of server.
+          schema:
+            "$ref": "#/definitions/ServiceCollection"
+        "500":
+          description: Internal server error.
     post:
       responses:
         "200":
@@ -175,6 +218,27 @@ paths:
             $ref: "#/definitions/ProblemJson"
         "429":
           description: Too many requests
+  "/services/{service_id}/keys":
+    get:
+      summary: Gets the subscription keys for the Service identified by the provided service_id
+      operationId:  getSubscriptionKeys
+      parameters:
+        - name: service_id
+          in: path
+          type: string
+          required: true
+          description: The ID of an existing Service.
+      responses:
+        "200":
+          description: The subscription keys for the service
+          schema:
+            $ref: "#/definitions/SubscriptionKeys"
+        "400":
+          description: Subscription not found
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal server error
 definitions:
   DevelopmentProfile:
     type: object
@@ -185,10 +249,24 @@ definitions:
       - email
   EmailAddress:
     $ref: "https://raw.githubusercontent.com/teamdigitale/io-functions-commons/master/openapi/definitions.yaml#/EmailAddress"
+  ServiceCollection:
+    type: object
+    properties:
+      items:
+        type: array
+        items:
+          $ref: "#/definitions/Service"
+      page_size:
+        type: number
+    required:
+      - items
+      - page_size
   ProblemJson:
     $ref: "https://raw.githubusercontent.com/teamdigitale/io-functions-commons/master/openapi/definitions.yaml#/ProblemJson"
   Service:
     "$ref": "https://raw.githubusercontent.com/teamdigitale/io-functions-commons/master/openapi/definitions.yaml#/Service"
+  ServiceMetadata:
+    "$ref": "https://raw.githubusercontent.com/teamdigitale/io-functions-commons/master/openapi/definitions.yaml#/ServiceMetadata"
   ServiceId:
     $ref: "https://raw.githubusercontent.com/teamdigitale/io-functions-commons/master/openapi/definitions.yaml#/ServiceId"
   ServiceName:
@@ -205,7 +283,25 @@ definitions:
     $ref: "https://raw.githubusercontent.com/teamdigitale/io-functions-commons/master/openapi/definitions.yaml#/OrganizationFiscalCode"
   ExtendedProfile:
     $ref: "https://raw.githubusercontent.com/teamdigitale/io-functions-commons/master/openapi/definitions.yaml#/ExtendedProfile"
-
+  Logo:
+    type: object
+    properties:
+      logo:
+        type: string
+        format: byte
+        minLength: 1
+    required:
+      - logo
+  SubscriptionKeys:
+    type: object
+    properties:
+      primary_key:
+        type: string
+      secondary_key:
+        type: string
+    required:
+      - primary_key
+      - secondary_key
 responses: {}
 parameters:
   SandboxFiscalCode:
