--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "deploy": "npm run build && func azure functionapp publish agid-functions-admin-test",
     "generate:definitions": "rimraf ./generated/definitions && shx mkdir -p ./generated/definitions && gen-api-models --api-spec ./openapi/index.yaml --out-dir ./generated/definitions",
     "dist:modules": "modclean -r -n default:safe && npm prune --production",
-    "dist:zip": "zip -r dist.zip . --exclude @.funcignore --exclude .funcignore",
-    "predeploy": "npm-run-all build dist:*"
+    "predeploy": "npm-run-all build dist:modules"
   },
   "description": "",
   "devDependencies": {
